--- a/app/src/main/res/layout/activity_politics.xml
+++ b/app/src/main/res/layout/activity_politics.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BurlyWood"
     tools:context="com.example.android.quizapp.Politics">
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
